# llm-os-rust

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  x86_64-llm-os.json
.cargo/: config.toml
.github/workflows/: rust.yml
bootloader/: .cargo_vcs_info.json  Cargo.toml  x86_64-bootloader.json
docs/: README.md  agent-runtime.md  boot-sequence.md  build-system.md  kernel-modules.md
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  linker.ld  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/agent/: context.rs  mod.rs  tools.rs
