[package]
name = "llm-os"
version = "0.1.0"
edition = "2021"
authors = ["Ranjan Das Gupta"]
description = "An AI-First Operating System in Rust — inspired by Andrej Karpathy's LLM OS concept"
license = "MIT"

[dependencies]
bootloader = { version = "=0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.7"
linked_list_allocator = "0.9"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
